--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -143,6 +143,7 @@ ol {
 .navdrawer-container.open {
   -webkit-transform: translate(0, 0);
           transform: translate(0, 0);
+  z-index: 3;
 }
 
 .app-bar,
